[gd_scene load_steps=16 format=3 uid="uid://d0ks1pscuauow"]

[ext_resource type="PackedScene" uid="uid://2oimpfhfwi4" path="res://Scenes/player.tscn" id="1_1pewh"]
[ext_resource type="Script" path="res://Scripts/level_1.gd" id="1_ecmsp"]
[ext_resource type="Texture2D" uid="uid://dka45hm27chmq" path="res://Assets/starbackground.png" id="3_k1kkc"]
[ext_resource type="PackedScene" uid="uid://ccw7ya3gcmicu" path="res://Scenes/stars_background.tscn" id="4_r7hcx"]
[ext_resource type="PackedScene" uid="uid://b8j8gku0rklyg" path="res://spawn_path.tscn" id="5_4ynun"]
[ext_resource type="Script" path="res://Scripts/wave_manager.gd" id="6_jyr2o"]
[ext_resource type="PackedScene" uid="uid://cxh6cdgyrnk1g" path="res://upgrade_selector.tscn" id="7_0unsy"]
[ext_resource type="Resource" uid="uid://b5euut1ohly5p" path="res://Upgrades/bullet_damage_upgrades.tres" id="8_v1ak3"]
[ext_resource type="Resource" uid="uid://bf82p4xkwt8xl" path="res://Upgrades/missle_damage_upgrades.tres" id="9_m20uq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xoixv"]
size = Vector2(2080, 135)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_pjy6a"]
distance = -131.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_36jsl"]
normal = Vector2(1, 0)
distance = -34.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_umdmk"]
normal = Vector2(-0.999974, 0.00724619)
distance = 125.018

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tln2b"]
size = Vector2(133, 3144.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yobp3"]
size = Vector2(3567, 2240)

[node name="Level 1" type="Node2D" node_paths=PackedStringArray("Wave", "enemy_counter")]
script = ExtResource("1_ecmsp")
Wave = NodePath("WaveManager")
enemy_counter = NodePath("Enemy_counter")

[node name="StarsBackground" parent="." instance=ExtResource("4_r7hcx")]
position = Vector2(249, -930)
amount = 4
lifetime = 3.0
emission_rect_extents = Vector2(1050, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enabled = true

[node name="Starbackground" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(266.375, -231.625)
scale = Vector2(3.23633, 3.87569)
texture = ExtResource("3_k1kkc")

[node name="player" parent="." instance=ExtResource("1_1pewh")]
position = Vector2(224, 50)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(237, -207)
zoom = Vector2(0.5, 0.5)

[node name="HurtZone" type="Area2D" parent="."]
position = Vector2(-333, 174)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtZone"]
position = Vector2(592, 358)
shape = SubResource("RectangleShape2D_xoixv")

[node name="Boundaries" type="Node" parent="."]

[node name="Back Block" type="StaticBody2D" parent="Boundaries"]
position = Vector2(-12, 232)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Back Block"]
position = Vector2(0, 1)
shape = SubResource("WorldBoundaryShape2D_pjy6a")

[node name="Left_Border" type="StaticBody2D" parent="Boundaries"]
position = Vector2(-37, -613)
collision_layer = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Left_Border"]
position = Vector2(-711, 268)
shape = SubResource("WorldBoundaryShape2D_36jsl")

[node name="Right_Border" type="StaticBody2D" parent="Boundaries"]
position = Vector2(21, -372)
collision_layer = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Right_Border"]
position = Vector2(1418, 5)
shape = SubResource("WorldBoundaryShape2D_umdmk")

[node name="EnemySpawnPath" parent="." node_paths=PackedStringArray("spawn_timer", "wave_manager", "level") instance=ExtResource("5_4ynun")]
position = Vector2(279.182, -976)
scale = Vector2(0.913259, 1)
spawn_timer = NodePath("../Timers/Enemy_Spawn_Timer")
timer_min = 1.0
timer_max = 2.0
wave_manager = NodePath("../WaveManager")
level = NodePath("..")

[node name="Timers" type="Node" parent="."]

[node name="Enemy_Spawn_Timer" type="Timer" parent="Timers"]
unique_name_in_owner = true

[node name="Left_Meteor_Timer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 2.0

[node name="Right_Meteor_Timer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 2.0

[node name="Despawn_Areas" type="Node" parent="."]

[node name="Despawn_Left" type="Area2D" parent="Despawn_Areas"]
position = Vector2(-294, -37)
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Despawn_Areas/Despawn_Left"]
position = Vector2(-975, -266)
shape = SubResource("RectangleShape2D_tln2b")

[node name="Despawn_Up" type="Area2D" parent="Despawn_Areas"]
position = Vector2(-294, -37)
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Despawn_Areas/Despawn_Up"]
position = Vector2(626.875, -1675)
rotation = 1.5708
shape = SubResource("RectangleShape2D_tln2b")

[node name="Despawn_Down" type="Area2D" parent="Despawn_Areas"]
position = Vector2(-267, 2670)
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Despawn_Areas/Despawn_Down"]
position = Vector2(626.875, -1675)
rotation = 1.5708
shape = SubResource("RectangleShape2D_tln2b")

[node name="Despawn_Right" type="Area2D" parent="Despawn_Areas"]
position = Vector2(3334, -98)
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Despawn_Areas/Despawn_Right"]
position = Vector2(-1359.5, -262.5)
shape = SubResource("RectangleShape2D_tln2b")

[node name="WaveManager" type="Node" parent="."]
script = ExtResource("6_jyr2o")
regular_enemy_limit = 10.0
regular_enemy_count = 1.0
fast_enemy_count = 1.0
carrier_enemy_count = 1.0

[node name="Level_change_timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0

[node name="UpgradeSelector" parent="." node_paths=PackedStringArray("player", "Level") instance=ExtResource("7_0unsy")]
unique_name_in_owner = true
visible = false
offset_left = -446.0
offset_top = -393.0
offset_right = -446.0
offset_bottom = -393.0
player = NodePath("../player")
bullet_damage_upgrade = ExtResource("8_v1ak3")
missle_damage_upgrade = ExtResource("9_m20uq")
Level = NodePath("..")

[node name="Enemy_counter" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_counter"]
position = Vector2(394.5, -319)
shape = SubResource("RectangleShape2D_yobp3")

[connection signal="body_entered" from="HurtZone" to="." method="_on_hurt_zone_body_entered"]
[connection signal="carrier_spawned" from="EnemySpawnPath" to="." method="_on_enemy_spawn_path_carrier_spawned"]
[connection signal="enemy_died" from="EnemySpawnPath" to="." method="_on_enemy_spawn_path_enemy_died"]
[connection signal="enemy_spawned" from="EnemySpawnPath" to="." method="_on_enemy_spawn_path_enemy_spawned"]
[connection signal="fast_enemy_spawned" from="EnemySpawnPath" to="." method="_on_enemy_spawn_path_fast_enemy_spawned"]
[connection signal="timeout" from="Timers/Enemy_Spawn_Timer" to="EnemySpawnPath" method="_on_enemy_spawn_timer_timeout"]
[connection signal="body_entered" from="Despawn_Areas/Despawn_Left" to="." method="_on_despawn_left_body_entered"]
[connection signal="body_entered" from="Despawn_Areas/Despawn_Up" to="." method="_on_despawn_left_body_entered"]
[connection signal="body_entered" from="Despawn_Areas/Despawn_Down" to="." method="_on_despawn_left_body_entered"]
[connection signal="body_entered" from="Despawn_Areas/Despawn_Right" to="." method="_on_despawn_right_body_entered"]
[connection signal="carrier_picked" from="WaveManager" to="EnemySpawnPath" method="_on_wave_manager_carrier_picked"]
[connection signal="enemy_picked" from="WaveManager" to="EnemySpawnPath" method="_on_wave_manager_enemy_picked"]
[connection signal="fast_enemy_picked" from="WaveManager" to="EnemySpawnPath" method="_on_wave_manager_fast_enemy_picked"]
[connection signal="timeout" from="Level_change_timer" to="." method="_on_level_change_timer_timeout"]
[connection signal="visibility_changed" from="UpgradeSelector" to="." method="_on_upgrade_selector_visibility_changed"]
